--- a/README.textile
+++ b/README.textile
@@ -26,27 +26,22 @@ def recover_with_associations!(*associations)
     end
   end
 end</code>
-
 # "Warner Hertzog":http://www.youtube.com/watch?v=FxKtZmQgxrI
-
 # The code is really complicated
 "aap - paranoid_find_wrapper.rb":http://github.com/technoweenie/acts_as_paranoid/blob/master/lib/caboose/acts/paranoid_find_wrapper.rb
-
 # Using the code is really complicated
 See my examples above
-
 # It significantly messes with find, destroy, and delete.
 This will screw you, immediately, or when it's really important.
 Additionally, everyone needs on your team needs to know how and why it's screwing with these methods, or they will screw everyone.
-
 # Annoying
-<pre>f = Foo.first
+<code>f = Foo.first
 f.destroy
 f.recover! #ERRRORRRRROR, Wesley
 Foo.find_with_deleted(:all).first.recover!
 Foo.all_with_deleted doesn't exist
 Foo.first_with_deleted doesn't exist
-etc.</pre>
+etc.</code>
 
 
 #Reasons to love acts_as_archival#
