--- a/README.textile
+++ b/README.textile
@@ -14,7 +14,7 @@ h1. Reasons to hate acts_as_paranoid
 # It is not atomic.
 see tests in "foo_test.rb":http://github.com/janxious/indyrb_archival_demo/blob/master/test/unit/foo_test.rb
 "aap - parnoid.rb":http://github.com/technoweenie/acts_as_paranoid/blob/master/lib/caboose/acts/paranoid.rb
-<code>def recover!
+<pre>def recover!
   self.deleted_at = nil
   save!
 end
@@ -25,7 +25,7 @@ def recover_with_associations!(*associations)
       a.recover! if a.class.paranoid?
     end
   end
-end</code>
+end</pre>
 # "Warner Hertzog":http://www.youtube.com/watch?v=FxKtZmQgxrI
 # The code is really complicated
 "aap - paranoid_find_wrapper.rb":http://github.com/technoweenie/acts_as_paranoid/blob/master/lib/caboose/acts/paranoid_find_wrapper.rb
