--- a/README.textile
+++ b/README.textile
@@ -40,8 +40,7 @@ Additionally, everyone needs on your team needs to know how and why it's screwin
     <pre><code>
     f = Foo.first
     f.destroy
-    # you can't modify 'f' because it's now a locked hash.
-    f.recover! # ERRRORRRRROR, Wesley
+    f.recover! # ERRRORRRRROR, Wesley; you can't modify 'f' because it's now a locked hash.
     Foo.find_with_deleted(:all).first.recover!
     Foo.all_with_deleted doesn't exist #ERROR NoMethod
     Foo.first_with_deleted doesn't exist #ERROR NoMethod
