--- a/README.textile
+++ b/README.textile
@@ -10,25 +10,29 @@ _Xx has_many Yy_ - acts_as_archival test models
 
 h1. Reasons to hate acts_as_paranoid
 # It has an inconsistent interface
-  See tests in "foo_test.rb":http://github.com/janxious/indyrb_archival_demo/blob/master/test/unit/foo_test.rb
+    See tests in "foo_test.rb":http://github.com/janxious/indyrb_archival_demo/blob/master/test/unit/foo_test.rb
+
+
 # It is not atomic.
-see tests in "foo_test.rb":http://github.com/janxious/indyrb_archival_demo/blob/master/test/unit/foo_test.rb
-"aap - parnoid.rb":http://github.com/technoweenie/acts_as_paranoid/blob/master/lib/caboose/acts/paranoid.rb
-<code>
-def recover!
-  self.deleted_at = nil
-  save!
-end
-def recover_with_associations!(*associations)
-  self.recover!
-  associations.to_a.each do |assoc|
-    self.send(assoc).find_with_deleted(:all).each do |a|
-      a.recover! if a.class.paranoid?
+    see tests in "foo_test.rb":http://github.com/janxious/indyrb_archival_demo/blob/master/test/unit/foo_test.rb
+    "aap - parnoid.rb":http://github.com/technoweenie/acts_as_paranoid/blob/master/lib/caboose/acts/paranoid.rb
+    <pre><code>
+    def recover!
+      self.deleted_at = nil
+      save!
     end
-  end
-end
-</code>
+    def recover_with_associations!(*associations)
+      self.recover!
+      associations.to_a.each do |assoc|
+        self.send(assoc).find_with_deleted(:all).each do |a|
+          a.recover! if a.class.paranoid?
+        end
+      end
+    end
+    </code></pre>
+
 # "Warner Hertzog":http://www.youtube.com/watch?v=FxKtZmQgxrI
+
 # The code is really complicated
     "aap - paranoid_find_wrapper.rb":http://github.com/technoweenie/acts_as_paranoid/blob/master/lib/caboose/acts/paranoid_find_wrapper.rb
 
